src/objects/MX_WF_Catalogo_tarjetas__c.object
<CustomObject>
    <description>Objeto para la aplicación WF, que almacena los productos del banco</description>
    <fields>
        <fullName>MX_WF_Bines__c</fullName>
        <description>Campo que almacena los bines de cada tarjeta</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bines</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_CAT__c</fullName>
        <description>Campo de tipo porcentaje que permite almacenar el CAT de una tarjeta</description>
        <label>CAT</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MX_WF_Cashback_Garanti__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación WF, permite almacenar si la tarjeta aplica para una promoción de Cashback para Garanti</description>
        <label>Cashback (Garanti)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Cuota_anual__c</fullName>
        <description>Campo que permite actualizar la cuota anual por parte del área de finanzas</description>
        <label>Cuota anual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_WF_MSI_Garanti__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación WF, permite almacenar si la tarjeta aplica para una promoción de MSI para Garanti</description>
        <label>MSI (Garanti)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_MSI_Operaciones__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación WF, permite almacenar si la tarjeta aplica para una promoción de MSI para Operaciones</description>
        <label>MSI (Operaciones)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Marca__c</fullName>
        <description>Campo de tipo lista de selección que permite especificar la marca de una tajeta</description>
        <label>Marca</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_Mes_de_ltima_modificaci_n__c</fullName>
        <description>Campo de tipo texto que permite especificar la última fecha en la que se modificó el CAT de la tarjeta</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de última modificación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_WF_Nombre_Producto__c</fullName>
        <description>Campo que almacena el nombre corto de la tarjeta</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre Producto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Otorg_Acumulacion_PuntosBBVA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación WF, permite almacenar si la tarjeta permite almacenar puntos</description>
        <label>Otorgamiento / Acumulación de Puntos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Producto__c</fullName>
        <description>Campo para la aplicación WF, permite almacenar el nombre del producto</description>
        <label>Producto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Débito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_Redencion_Puntos_Banc_tipoCambDif__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación WF, permite almacenar si la tarjeta aplica para una promoción de Puntos Bancomer para Garanti</description>
        <label>Redención Puntos Bancomer diferenciado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Skip_Payment_Garanti__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación WF, permite almacenar si la tarjeta aplica para una promoción de Skip Payment para Garanti</description>
        <label>Skip Payment (Garanti)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Skip_Payment_Operaciones__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación WF, permite almacenar si la tarjeta aplica para una promoción de Skip Payment para Operaciones</description>
        <label>Skip Payment (Operaciones)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Sticker__c</fullName>
        <description>Campo para la aplicación WF, permite determinar el porcentaje de acumulación de puntos BBVA para Sticker</description>
        <label>Sticker</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MX_WF_Tarjeta_de_credito_fisica__c</fullName>
        <description>Campo para la aplicación WF, permite determinar el porcentaje de acumulación de puntos BBVA para tarjetas físicas</description>
        <label>Tarjeta de crédito física</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MX_WF_Tasa_producto__c</fullName>
        <description>Campo para la aplicación WF, permite al área de finanzas informar la tasa de la tarjeta</description>
        <label>Tasa producto</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MX_WF_codigo_tarjeta_wallet__c</fullName>
        <description>Campo de tipo texto que permite ligar una tarjeta de negocio a una de Wallet</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Código tarjeta wallet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tarjeta_de_credito_digital__c</fullName>
        <description>Campo para la aplicación WF, permite determinar el porcentaje de acumulación de puntos BBVA para tarjetas digitales</description>
        <label>Tarjeta de crédito digital</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Catálogo tarjetas</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MX_WF_Nombre_Producto__c</columns>
        <columns>MX_WF_Producto__c</columns>
        <columns>MX_WF_Marca__c</columns>
        <columns>MX_WF_CAT__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre detallado del Producto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catálogo tarjetas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>